<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".BaseActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/ll_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_logged_as"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:padding="4dp"
                android:layout_weight="6"/>

            <TextView
                android:id="@+id/tv_role"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:padding="4dp"
                android:layout_weight="6"/>
            <TextView
                android:id="@+id/tv_log_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:layout_weight="3"
                android:textAlignment="viewEnd"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/img_btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:background="?android:attr/selectableItemBackground"
                app:srcCompat="@drawable/ic_baseline_login_24"
                android:layout_weight="1"/>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_top"
            app:layout_constraintBottom_toTopOf="@id/bottom_navigation_fm">

        </FrameLayout>


        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation_fm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            app:menu="@menu/bottom_nav_menu_fm"

            app:itemIconTint="@drawable/selector"
            app:itemTextColor="@drawable/selector"
            android:background="?colorPrimary"

            app:labelVisibilityMode="labeled"/>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation_fim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            app:menu="@menu/bottom_nav_menu_fim"

            app:itemIconTint="@drawable/selector"
            app:itemTextColor="@drawable/selector"
            android:background="?colorPrimary"

            app:labelVisibilityMode="labeled"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>